v.1.0.4


v.1.0.3

Trying out a different damage system. Basically:
- I don't change vanilla damage at all, I just add my damage too.
- This leads to all armor and weapons being compatible, just less and less useful as Age of Exile stats grow over levels.
- I'm still unsure if players who attack with Age of Exile weapons should do both vanilla and exile damage.

With this, my mod should no longer be a compatibility nightmare and requiring itself to be the center of a modpack. 
Just tweak max level and stat scalings and you can make Age of Exile gear either mandatory, optional or even weak!

Want Age of Exile gear to be the sole way of gear progression? Up those stat scalings!
Want to balance it with other mods? Tweak to balance it!

* should fix server crashing on spell casting
* tweaked gear drop types, jewelry rarer, staffs more common
* buffed elemental resist affixes a bit
* fix loot not being dropped if player doesnt do the finishing hit
* fix affixes all being same weight (chance to spawn)
* made ele mobs transform their dmg to elemental, instead of adding extra ele dmg. This should reduce 1 shots by a lot!
* magic shield shouldn't be lost if dmg is blocked now
* made stations a bit cheaper

v.1.0.2
* fix horse gui crash
* added chinese translation

v.1.0.1

Added required dependences, sorry about that!

* buffed gear drops
* buffed repair station
* nerf socket chance
* made mob lvls go faster per distance
* gear durability shouldnt go down this fast anymore

1.0

Big compatibility changes:

* Damage is no longer overrided except for item's with stats and my spells. This means other mod's gear and spells should ALL be compatible now!
* There's no magical mine and slash hp anymore, instead your normal hearts are increased.
* Stats scale much slower with levels, and if you want to nerf or buff how strong my mod is, just increase or decrease stat scaling or maximum level. Both work.